--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,23 @@ project(algorithms)
 
 set(CMAKE_CXX_STANDARD 20)
 
+set(SORT_LIBRARY_NAME SORTLIB)
+
+add_library(${SORT_LIBRARY_NAME} src/InsertionSort.cpp)
+
+target_include_directories(${SORT_LIBRARY_NAME} PRIVATE
+$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/${SORT_LIBRARY_NAME}>
+$<INSTALL_INTERFACE:include/${SORT_LIBRARY_NAME}
+)
+
+target_include_directories(${SORT_LIBRARY_NAME} PUBLIC
+$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+$<INSTALL_INTERFACE:include>
+)
+
+
+###### TESTING #########
+
 include(FetchContent)
 FetchContent_Declare(
   googletest
@@ -13,15 +30,17 @@ FetchContent_MakeAvailable(googletest)
 
 enable_testing()
 
-
-add_library(InsertionSort InsertionSort.cpp)
-
-add_executable(SortTest TestSorting.cpp)
+add_executable(SortTest tests/TestSorting.cpp)
 target_link_libraries(
   SortTest
-  InsertionSort
+  ${SORT_LIBRARY_NAME}
   GTest::gtest_main
 )
 
 include(GoogleTest)
+
+if (NOT (TARGET gtest AND TARGET gtest_main))
+    message(FATAL_ERROR "gtest and gtest_main targets NOT found")
+endif()
+
 gtest_discover_tests(SortTest)
